--- a/app-client/apollo-client/src/index.css
+++ b/app-client/apollo-client/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: sans-serif;
   background: rgb(226, 229, 231);
   color: #14171a;
 }
